prevent overflow when nav bar is visible

--- a/style.sass
+++ b/style.sass
@@ -2,6 +2,8 @@ body
   font-family: "Lato", sans-serif
   margin: 0
   height: 100vh
+
+*
   overflow: hidden
 
 header
@@ -27,7 +29,6 @@ header
   top: 0
   left: 0
   background-color: #111
-  overflow-x: hidden
   padding-top: 60px
   transition: var(--transition-duration)
 
